--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,17 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "nodemon": "^3.0.2"
   }
 }
