--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
