--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@mdxeditor/editor": "^3.11.3",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
