--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@mdxeditor/editor": "^3.11.3",
+    "@mdxeditor/editor": "^3.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
